--- a/nosotros.html
+++ b/nosotros.html
@@ -22,9 +22,43 @@
     </nav>
 
     <main class="contenedor">
-        <h1>Nosotros</h1>
-
+        <h1>Sobre nosotros</h1>
+        <div class="contenedor--nosotros">
+            <img class:"contenedor--nosotros__imagen" src="img/nosotros.jpg" alt="Nosotros">
+                <p class="contenedor--nosotros__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et pretium velit. Curabitur molestie ipsum accumsan, commodo arcu non, ornare augue. Pellentesque turpis arcu, posuere ut augue eleifend, vulputate feugiat nisl. Maecenas porttitor hendrerit condimentum. Donec non justo in massa ornare sollicitudin. Vivamus id elementum ex. Praesent at dolor ultrices, dignissim turpis vitae, dignissim massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. In vulputate ligula turpis.
+                    In quis placerat nulla, eu finibus lacus. Donec rhoncus id nibh eget pharetra. Fusce dictum arcu sit amet dui pulvinar congue. Quisque gravida nulla nec dolor pharetra malesuada. Duis mauris risus, ullamcorper sed magna at, condimentum dignissim nunc. Nullam in tellus sit amet dolor vulputate auctor id sed ligula. Praesent lobortis leo et lorem dignissim interdum. Etiam nulla diam, ultricies posuere laoreet sed, semper quis ipsum. Aliquam eu leo sapien. Curabitur tristique, nunc eu blandit tincidunt, diam augue luctus ante, eget placerat turpis elit eu elit. Aenean volutpat sem risus, a laoreet justo hendrerit vel. Donec leo turpis, pulvinar at risus in, ultrices efficitur eros. Etiam diam quam, lacinia bibendum vestibulum sit amet, aliquam ac nulla. Phasellus eleifend sollicitudin vestibulum. Nam non vehicula augue. Ut ut nisl eget orci iaculis accumsan.</p>
+            
+            </div>
+            
     </main>
+
+    <section class="contenedor comprar"> 
+        <h2 class="comprar__titulo"> Porque comprar con nosotros?</h2>
+
+        <div class="bloques">
+            <div class="bloque">
+                <img class:"bloque__imagen" src="img/icono_1.png" alt="icono">
+                <h3 class="bloque__titulo"> El mejor precio</h3>
+                <p>In quis placerat nulla, eu finibus lacus. Donec rhoncus id nibh eget pharetra. </p>
+            </div> <!--.bloque-->
+            <div class="bloque">
+                <img class:"bloque__imagen" src="img/icono_2.png" alt="icono">
+                <h3 class="bloque__titulo"> Para Devs</h3>
+                <p>In quis placerat nulla, eu finibus lacus. Donec rhoncus id nibh eget pharetra. </p>
+            </div> <!--.bloque-->
+            <div class="bloque">
+                <img class:"bloque__imagen" src="img/icono_3.png" alt="icono">
+                <h3 class="bloque__titulo"> Envio gratis</h3>
+                <p>In quis placerat nulla, eu finibus lacus. Donec rhoncus id nibh eget pharetra. </p>
+            </div> <!--.bloque-->
+            <div class="bloque">
+                <img class:"bloque__imagen" src="img/icono_4.png" alt="icono">
+                <h3 class="bloque__titulo"> La mejor calidad</h3>
+                <p>In quis placerat nulla, eu finibus lacus. Donec rhoncus id nibh eget pharetra. </p>
+            </div> <!--.bloque-->
+        </div> <!--.bloques-->
+
+    </section>
 
     <footer class="footer">
         <p class="footer__texto">
