--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
             <p class="producto__precio">$25</p>
         </div>
         </a>
-    
-</div>    <!--.producto-->
+    </div>    <!--.producto-->
 <div class="producto">
     <a href="producto.html">
     <img class="producto__imagen" src="img/4.jpg" alt="imagen camisa">
@@ -151,7 +150,11 @@
         <p class="producto__precio">$25</p>
     </div>
     </a>
-</div>    <!--.producto-->
+    </div>    <!--.producto-->
+
+    <div class="grafico grafico--camisas"></div>
+    <div class="grafico grafico--node"></div>
+</div>
     </main>
 
     <footer class="footer">
